--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
     <div class="main d-flex justify-content-center align-items-center">
       <div class="box bg-dark p-3">
         <div class="d-flex justify-content-evenly align-items-center">
-          <div id="standard" class="large" onclick="standardUnit()">
-            Standard
-          </div>
-          <div id="metric" class="small" onclick="metricUnit()">Metric</div>
+          <div id="standard" class="large">Standard</div>
+          <div id="metric" class="small">Metric</div>
         </div>
       </div>
     </div>
