--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       src="https://kit.fontawesome.com/6ac870986a.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
     <title>BMI Calculator</title>
   </head>
   <body>
